
GAME CONTENT CHANGES:
- Add a new power state `Offline`, which applies to all bases
  under construction until they can become `Active`.  Bases in
  the `Offline` state currently behave like they are in the
  `Sleep` state.  Based on an idea from Wuzzy2 (Closes: #239,
  #245) (Xenega)
- The thrift modification from locations now also applies to
  CPU maintenance.  (Xenega)

USER-VISIBLE CHANGES:
- Implement lexicographic sorting of strings by using Python's
  `locale.strxfrm`.  This provides better sorting order for
  non-English languages on all platforms where `locale.strxfrm`
  works.  Notable exception being MacOS, where Python is
  reported to have issues still.  (Closes: #271)  (gunchleoc)
- Add support for mouse-wheel scrolling in pygame 2 with SDL 2,
  which re-enables scrolling in lists.  (nthykier)
- Rewrite handling of "holding down key" to repeat a key press.
  This avoids false "key-repeation" when accented characters.
  Note that pygame2 with SDLv2 is needed to be able to repeat
  accented characters by holding down the key.  (Closes: #281)
  (nthykier)
- Change layout of Knowledge screen.  Among other things, this
  makes more room for concept names.  (Closes: #270, #279)
  (Xenega)
- Location screen now disables buttons that have no effect.
  Previously, they would just do "nothing" but where still
  clickable.  (nthykier)
- Ensure that singularity can start when installed and loaded
  via pkg_resources.load_entry_point.  (Closes #272)  (nthykier)
- Improve savegame dialog to use a translated version of the
  difficulity as default savegame and reject some invalid
  path names with a simple error message rather than an
  exception.  Furthermore, the "OK" button is now disabled when
  the savegame name in invalid.  (Closes #267)  (gunchleoc)
- Disable Load and Delete buttons in the load savegame dialog
  when there are no savegames.  (nthykier)
- Avoid a crash when clicking Load or Delete in the load